# Tuxedo

./: .gitignore  CLAUDE.md  COG_PORT_TODO.md  NOTICE.md  README.md  meson.build
.github/: copilot-instructions.md
src/core/: archive_url.cpp  archive_url.hpp  audio_chunk.cpp  audio_chunk.hpp  channel_layout.cpp  channel_layout.hpp  cue_sheet.cpp  cue_sheet.hpp  format.hpp  media_probe.cpp  media_probe.hpp  metadata_query.cpp  metadata_query.hpp  player.cpp  player.hpp  playlist_parser.cpp  playlist_parser.hpp  replaygain.cpp  replaygain.hpp  status.hpp
src/core/chain/: buffer_chain.cpp  buffer_chain.hpp  converter_node.cpp  converter_node.hpp  downmix.cpp  downmix.hpp  dsp_downmix_node.cpp  dsp_downmix_node.hpp  dsp_fader_node.cpp  dsp_fader_node.hpp  dsp_node.cpp  dsp_node.hpp  faded_buffer.cpp  faded_buffer.hpp  input_node.cpp  input_node.hpp  node.cpp  node.hpp  output_node.cpp  output_node.hpp
src/daemon/: main.cpp
src/ipc/: controller.cpp  controller.hpp  event_mailbox.hpp  http_server.cpp  http_server.hpp  socket_server.cpp  socket_server.hpp  stdin_control.cpp  stdin_control.hpp
src/output/: miniaudio_backend.cpp  miniaudio_backend.hpp
src/plugin/: decoder.hpp  file_source.cpp  flac_decoder.cpp  miniaudio_decoder.cpp  output_backend.hpp  registry.cpp  registry.hpp  source.hpp
src/plugin/dsp/: effect.hpp  fader_effect.cpp  fader_effect.hpp
src/plugin/input/: archive_source.cpp  archive_source.hpp  cue_decoder.cpp  cue_decoder.hpp  ffmpeg_decoder.cpp  ffmpeg_decoder.hpp  file_source.cpp  file_source.hpp  flac_decoder.cpp  flac_decoder.hpp  hls_decoder.cpp  hls_decoder.hpp  hls_memory_source.cpp  hls_memory_source.hpp  hls_playlist.cpp  hls_playlist.hpp  hls_segment_manager.cpp  hls_segment_manager.hpp  http_source.cpp  http_source.hpp  miniaudio_decoder.cpp  miniaudio_decoder.hpp  mp3_decoder.cpp  mp3_decoder.hpp  musepack_decoder.cpp  musepack_decoder.hpp  opus_decoder.cpp  opus_decoder.hpp  silence_decoder.cpp  silence_decoder.hpp  silence_source.cpp  silence_source.hpp  vorbis_common.cpp  vorbis_common.hpp  vorbis_decoder.cpp  vorbis_decoder.hpp
src/plugin/output/: miniaudio_backend.cpp  miniaudio_backend.hpp
